--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <!-- Custom CSS File -->
+<link href="assets/css/custom.css" rel="stylesheet">
+
 
   <!-- =======================================================
   * Template Name: Craftivo
